Estructuración de la vista principal

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <div id="root">
+  <header>
+    <h1>Studio Ghibli</h1>
+     <h2>Conozca sus principales animaciones</h2>
+  </header>
   <body>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
+   
+      <a href="ghibli.js"><img src="https://static.wikia.nocookie.net/studio-ghibli/images/c/c1/Castle_in_the_Sky.jpg" alt="Poster de pelicula">Castle in the sky</a>
+      <a href="ghibli.js"><img src="https://static.wikia.nocookie.net/studio-ghibli/images/d/db/My_Neighbor_Totoro.jpg" alt="poster de pelicula">My neighbor Totoro</a>
+      <a href="ghibli.js"><img src="https://static.wikia.nocookie.net/studio-ghibli/images/a/a9/Only_Yesterday.jpg" alt="Poster de pelicula">Only yesterday</a>
+    </div>
+    <script src="ghibli.js" type="module"></script>
   </body>
 </html>
