--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&family=Pacifico&family=Six+Caps&family=Source+Code+Pro:ital@1&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <div id="root">
-  <header>
-    <h1>Studio Ghibli</h1>
-     <h2>Conozca sus principales animaciones</h2>
-  </header>
   <body>
-   
-      <a href="ghibli.js"><img src="https://static.wikia.nocookie.net/studio-ghibli/images/c/c1/Castle_in_the_Sky.jpg" alt="Poster de pelicula">Castle in the sky</a>
-      <a href="ghibli.js"><img src="https://static.wikia.nocookie.net/studio-ghibli/images/d/db/My_Neighbor_Totoro.jpg" alt="poster de pelicula">My neighbor Totoro</a>
-      <a href="ghibli.js"><img src="https://static.wikia.nocookie.net/studio-ghibli/images/a/a9/Only_Yesterday.jpg" alt="Poster de pelicula">Only yesterday</a>
-    </div>
-    <script src="ghibli.js" type="module"></script>
+    <header class="banner-one" id="banner-one">
+      <!-- <h1>Studio Ghibli</h1> -->
+      <!-- <h2>Conozca sus principales animaciones</h2> -->
+      <nav class="banner-one-content container">
+        <figure>
+          <img src="./img/logo.png" alt="logo1" class="img-logo1" />
+        </figure>
+      </nav>
+    </header>
+    <main class="banner-two" id="banner-two">
+      <section class="banner-two-content container">
+        <h3 class="subtitle">Lista de peliculas</h3>
+        <article class="buttons-model">
+          <select class="select-buttons" id="buttons-directors">
+            <option value="">Seleccione</option>
+          </select>
+          <select class="select-buttons" id="buttons-order">
+            <option value="">Seleccione</option>
+            <option value="">A - Z</option>
+            <option value="">Z - A</option>
+          </select>
+          <input
+            type="text"
+            placeholder="Buscar"
+            class="select-buttons"
+            id="buttons-search"
+          />
+        </article>
+        <section class="cards-model" id="cards-model">
+          <!-- <article class="cards-date">
+            <figure class="fig-cards">
+              <a href="ghibli.js"
+                ><img
+                  class="img-cards"
+                  src="https://static.wikia.nocookie.net/studio-ghibli/images/c/c1/Castle_in_the_Sky.jpg"
+                  alt="Poster de pelicula"
+                />
+                <p class="films-name">Castle in the sky</p>
+              </a>
+            </figure>
+          </article>  -->
+          <!-- <article class="cards-date">
+            <figure class="fig-cards">
+              <a href="ghibli.js"
+                ><img
+                  class="img-cards"
+                  src="https://static.wikia.nocookie.net/studio-ghibli/images/d/db/My_Neighbor_Totoro.jpg"
+                  alt="poster de pelicula"
+                />
+                <p class="films-name">My neighbor Totoro</p>
+                />
+              </a>
+            </figure> 
+          </article>
+          <article class="cards-date">
+            <div class="card-date">
+              <figure class="fig-cards">
+                <a href="ghibli.js"
+                  ><img
+                    class="img-cards"
+                    src="https://static.wikia.nocookie.net/studio-ghibli/images/a/a9/Only_Yesterday.jpg"
+                    alt="Poster de pelicula"
+                  />
+                  <p class="films-name">Only yesterday</p>
+                </a>
+              </figure>
+            </div>
+          </article> -->
+        </section>
+      </section>
+    </main>
+    <footer class="information">
+      <button class="icon-wsp">
+        <a href="https://wa.me/936016053">
+          <img src="./img/Whatsapp.svg" alt="" />
+        </a>
+        <p>Dejanos tu sugerencia</p>
+      </button>
+      <article class="disclaimer">
+        <p class="text-disclaimer">
+          <!-- De acuerdo a los principios de convivencia armónica y diversidad como
+          valor intrínseco que orientan nuestra política de diversidad e
+          inclusión, Laboratoria no condona ni avala los comentarios de la data
+          utilizada en este dataset del proyecto, identidad de género y personas
+          neurodivergentes. -->
+          <span class="by"> © 2023 By Mayara & Jhoana</span>
+        </p>
+      </article>
+    </footer>
+
+    <!-- <script src="ghibli.js" type="module"></script> -->
+    <!-- <div id="root"> -->
+    <script src="main.js" type="module"></script>
+     
   </body>
 </html>
