--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    holiwi
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
