--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+   
 
     <audio controls>
       <source src="Extras/Professor (Main Theme) - Pokémon GO OST (Extended).mp3">
           Tu navegador no soporta audio HTML5.
   </audio>
-      <main class="box">
-
-  <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/imagenGo.png" width="10%" />
+       
+  <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/imagen Go.png" width="10%" /> <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/>
 <div id="menu">
   <button id="home">Home</button>
   <button id ="pokedex"> Pokedex</button>
@@ -21,11 +21,15 @@
   <button id ="extra"> Otros</button>
 </div>
 
-<img alt="Logo PokemonGo" src="Extras/IMG/Image20230303143416.png" width="25%" />
+<center><img alt="Logo PokemonGo" src="Extras/IMG/Image20230303143416.png" width="40%" /> </center>
 
 
-    <div id="root"></div>
+
+
+
+
+
+    <div id="root"></div> 
     <script src="main.js" type="module"></script>
-  </main>
   </body>
 </html>
