Modificacion de fondo y CSS

--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-   
 
-    <audio controls>
-      <source src="Extras/Professor (Main Theme) - Pokémon GO OST (Extended).mp3">
-          Tu navegador no soporta audio HTML5.
-  </audio>
-       
-  <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/imagen Go.png" width="10%" /> <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/> <img src="Extras/IMG/pikachu-running.gif" width=" 10%"/>
-<div id="menu">
-  <button id="home">Home</button>
-  <button id ="pokedex"> Pokedex</button>
-  <button id ="map"> Mapa</button>
-  <button id ="extra"> Otros</button>
-</div>
+<head>
+  <meta charset="utf-8">
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-<center><img alt="Logo PokemonGo" src="Extras/IMG/Image20230303143416.png" width="40%" /> </center>
+<body>
 
+  <audio controls>
+    <source src="Extras/Professor (Main Theme) - Pokémon GO OST (Extended).mp3">
+    Tu navegador no soporta audio HTML5.</audio>
 
+  <img src="extra/pikachu-running.gif" width=" 10%" /> <img src="extra/poGoLogo2.png" width="30%" />
 
+  <main class="boxtwo">
+    <div id="menu">
+      <button id="home">Home</button>
+      <button id="pokedex"> Pokedex</button>
+      <button id="map"> Mapa</button>
+      <button id="extra"> Otros</button>
+    </div>
+  </main>
 
 
 
 
-    <div id="root"></div> 
-    <script src="main.js" type="module"></script>
-  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <img alt="Logo PokemonGo" src="extra/poGoLogo.png" width="20%" />
+
+
+  <script src="main.js" type="module"></script>
+
+</body>
+
 </html>
