--- a/src/index.html
+++ b/src/index.html
@@ -23,19 +23,24 @@
       <section class="banner-two-content container">
         <article class="buttons-model">
           <select class="select-buttons" id="buttons-directors">
-            <option value="">Seleccione</option>
+            <option value="">Director</option>
+          </select>
+          <select class="select-buttons" id="buttons-producers">
+            <option value="">Productor</option>
           </select>
           <select class="select-buttons" id="buttons-order">
             <option value="">Seleccione</option>
             <option value="a-z">A - Z</option>
             <option value="z-a">Z - A</option>
           </select>
+          <select class="select-buttons" id="buttons-release"><option value="">Año</option>
           <input
             type="search"
             placeholder="Buscar"
             class="select-buttons plus"
             id="buttons-search"
           />
+            <input type="button" class="buttons-restore" value="Restaurar" onclick="location.reload()"/>
         </article>
         <section class="cards-model" id="cards-model"></section>
       </section>
