--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,42 @@
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <div class="titulo">
+    <img src ="https://upload.wikimedia.org/wikipedia/commons/b/b1/Rick_and_Morty.svg" alt="Rick and Morty">
+  </div>
+  </header>
+  <nav>
+    <div class="personajes">
+      <button class="dropbtn"><strong>Personajes</strong> </button>
+      <div class="dropdown-content">
+        <ul id="personajesA-F">A - F</ul>
+        <ul id="personajesG-M">G - M</ul>
+        <ul id="personajesN-S">N - S</ul>
+        <ul id="personajesT-Z">T - Z</ul>
+      </div>
+
+    <div class="especie">
+      <button class="dropbtn1"><strong>Especie</strong></button>
+      <div class="dropdown1-content">
+        <ul id="especieAlien">Alienigenas</ul>
+        <ul id="especieAnimal">Animales</ul>
+        <ul id="especieCronen">Cronenbergs</ul>
+        <ul id="especieHuman">Humanos</ul>
+        <ul id="especieHumanoide">Humanoides</ul>
+        <ul id="especieMito">Mitológicos</ul>
+        <ul id="especiePara">Parásitos</ul>
+        <ul id="especieRobo">Robots</ul>
+        <ul id="especieVampi">Vampíros</ul>
+        <ul id="especieDesease">Versión disease</ul>
+        <ul id="especieDesconocido">Desconocido</ul>
+      </div>
+    </div> 
+    </div>
+  </nav>
   <body>
-    <div id="root"></div>
+    <div class="imgPersonajes" id="imgPersonajes"></div>
+   
     <script src="main.js" type="module"></script>
   </body>
 </html>
