Solucion de conflictos

--- a/src/index.html
+++ b/src/index.html
@@ -33,14 +33,21 @@
             <option value="a-z">A - Z</option>
             <option value="z-a">Z - A</option>
           </select>
-          <select class="select-buttons" id="buttons-release"><option value="">Año</option>
+          <select class="select-buttons" id="buttons-release">
+            <option value="">Año</option>
+          </select>
           <input
             type="search"
             placeholder="Buscar"
             class="select-buttons plus"
             id="buttons-search"
           />
-            <input type="button" class="buttons-restore" value="Restaurar" onclick="location.reload()"/>
+          <input
+            type="button"
+            class="buttons-restore"
+            value="Restaurar"
+            onclick="location.reload()"
+          />
         </article>
         <section class="cards-model" id="cards-model"></section>
       </section>
