Creamos texto de bienvenida

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 
   <audio controls>
     <source src="Extras/Professor (Main Theme) - Pokémon GO OST (Extended).mp3">
-    Tu navegador no soporta audio HTML5.</audio>
+    Tu navegador no soporta audio HTML5.
+  </audio>
 
   <img src="extra/pikachu-running.gif" width=" 10%" /> <img src="extra/poGoLogo2.png" width="30%" />
 
@@ -24,6 +25,17 @@
     </div>
   </main>
 
+  <div id= "bienvenida">
+    Hola entrenador Pokemon
+    te damos la bienvenida al emocionante mundo de Pokemon Go!
+
+    Este juego te invita a salir de casa e ir en la búsqueda de pokemons
+    completa tu Pokedex y combate con otros jugadores en la liga
+
+    Nosotras de ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, además tenemos un mapa
+    donde te indicamos que pokemon puedes encontrar con mayor probabilidad
+    en cada zona geográfica.
+  </div>
 
 
 
