--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>¡Hola!, ¿cómo estás?</h1>
+
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
