--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,25 @@
     </div>
   </main>
 
-  <div id= "bienvenida">
+  <div id= "welcome">
     Hola entrenador Pokemon
     te damos la bienvenida al emocionante mundo de Pokemon Go!
 
-    Este juego te invita a salir de casa e ir en la búsqueda de pokemons
-    completa tu Pokedex y combate con otros jugadores en la liga
+    Este juego te invita a salir de casa e ir en la búsqueda de pokemons!!
+    completa tu Pokedex y combate con otros jugadores en la liga de combates Go!
 
     Nosotras de ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, además tenemos un mapa
     donde te indicamos que pokemon puedes encontrar con mayor probabilidad
     en cada zona geográfica.
   </div>
 
+  <div class="slider-container"> 
+    <img class="slider-item" src="./extra/noticia1.png" alt="¡Perfecciona tus habilidades en el evento Objetivo de Captura!" ></img>
+    <img class="slider-item" src="./extra/noticia2.png" alt="Día de la Comunidad de marzo de 2023: Slowpoke y Slowpoke de Galar" ></img>
+    <img class="slider-item" src="./extra/noticia3.png" alt="Actualización sobre la Liga Combates GO: Rising Heroes" ></img>
 
+
+  </div>
 
 
 
