T1HU1 eEstructura Html basica  mas selectores css correpondintes

--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
 <body>
   <!--(futura Pantalla Inicio) Logo -->
   <header>
-    <img src="logo.png" class="logoinicio">
+    <img src="logo_OTRO.png" class="logoinicio">
   </header>
 
   <!--Rederizado de posters en pantalla principal sprint 1-->
   
-<setion id="container" class="cards"></setion>
+<div id="animaciones" class="tarjetas"></div>
 
-  <script src="main.js" type="module"></script>
+<script src="main.js" type="module"></script>
 </body>
 
 </html>
