Realizar las pruebas unitarias

--- a/src/index.html
+++ b/src/index.html
@@ -23,18 +23,18 @@
       <section class="banner-two-content container">
         <article class="buttons-model">
           <select class="select-buttons" id="buttons-directors">
-            <option value="">Director</option>
+            <option value="">Filter by director</option>
           </select>
           <select class="select-buttons" id="buttons-producers">
-            <option value="">Productor</option>
+            <option value="">Filter by Productor</option>
           </select>
           <select class="select-buttons" id="buttons-order">
-            <option value="">Seleccione</option>
+            <option value="">Sort by</option>
             <option value="a-z">A - Z</option>
             <option value="z-a">Z - A</option>
           </select>
           <select class="select-buttons" id="buttons-release">
-            <option value="">Año</option>
+            <option value="">Sort by</option>
           </select>
           <input
             type="search"
