--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>mr</title>
+    <title>pokemon</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+<h1>pokemon go</h1>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
