imagenes pokemon centradas

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
     <p>  Nosotras de ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, 
     además tenemos un mapa donde te indicamos que pokemon puedes encontrar con mayor probabilidad
     en cada zona geográfica. </p> 
+    <img id ="oak" src="/extra/profesorOak.webp" width="40%" /> 
   </div>
 
   <div id="carrusel"> 
