modificaciones en HTML, CSS y js

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli">
+        </div>
+        <div class="barra">
+          <div class="buscar">
+            <p class="buscador">Buscar</p>
+            <input class="b-busqueda" type="text">
+          </div>
+          <div class="filtro">Filtro</div>
+          <div class="orden">Orden</div>
+        </div>
+      </header>
+      <section>
+        <div class="card1"></div>
+        <div class="card2"></div>
+      </section>
+      <footer class="footer"></footer>
+    </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
