--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli">
+        </div>
+        <div class="barra">
+          <div class="buscar">
+            <p class="buscador">Buscar:</p>
+            <input class="b-busqueda" type="text">
+          </div>
+          <div class="filtro">Seleccionar filtro: <select>
+            <option value="pelicula">Pelicula</option>
+            <option value="anio">Año</option>
+            <option value="score">Score</option>
+            <option value="director">Director</option>
+          </select></div>
+          <div class="orden">Ordenar por: <select>
+            <option value="anio_up">Año</option>
+            <option value="name">Nombre</option>
+          </select></div>
+        </div>
+      </header>
+      <section>
+        <div class="card1"></div>
+        <div class="card2"></div>
+      </section>
+      <footer class="footer"></footer>
+    </div>
+
+    	<!-- Borde azul -->
+	<div id="left"></div>
+	<div id="right"></div>
+	<div id="top"></div>
+	<div id="bottom"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
