se agrego comentario en el index.html

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
       <footer class="footer"></footer>
     </div>
 
-    	<!-- Borde azul -->
+    	<!-- Borde azul 
+        Borde blanco
+        Borce celeste
+      -->
 	<div id="left"></div>
 	<div id="right"></div>
 	<div id="top"></div>
