--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
 
   <div id= "welcome">
     <h1> Hola entrenador Pokemon </h1> 
-    <h2>  te damos la bienvenida al emocionante mundo de Pokemon Go!</h2>
+    <h2>  Te damos la bienvenida al emocionante mundo de Pokemon Go!</h2>
 
    <p> Este juego te invita a salir de casa e ir en la búsqueda de pokemons!!
     completa tu Pokedex y combate con otros jugadores en la liga de combates Go!</p>
 
     <p>  Nosotras de ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, 
     además tenemos un mapa donde te indicamos que pokemon puedes encontrar con mayor probabilidad
-    en cada zona geográfica. </p> 
+    en cada zona geográfica. </p>
     <img id ="oak" src="/extra/profesorOak.webp" width="40%" /> 
   </div>
 
@@ -88,7 +88,7 @@
 
 
 
-
+<footer> Web creada por Gisselle y Carolina</footer>
 
 
 
