--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-compatible" content="IE=edge">
+    <link rel="shortcut icon" href="img/13.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
+    <title>Peliculas Studio Ghibli</title>
+    <img class= "img1" src="img/3.png" alt="logo Studio Ghibli">
+    <img class= "img2" src="img/6.png" alt="logo Studio Ghibli">
   </head>
-  <body>
+  <body> 
+
+    <header class="header">
+      <script src="content.js" defer></script>
+      <img class="img" src="img/14.png" width="80" height="80">
+      <p data-target="#inicio">Inicio</p>
+      <p data-target="#busqueda">Compra</p>
+      <p data-target="#contacto">Pago</p>
+    </header>
+
+    <main data-content="content" class="active" id="inicio">
+      
+    </main>
+  
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
