--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
+    <main id="root">
       <header>
         <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli">
         </div>
         <div class="barra">
           <div class="buscar">
-            <p class="buscador">Buscar:</p>
+            <div class="buscador">Buscar:</div>
             <input class="b-busqueda" type="text">
           </div>
           <div class="filtro">Seleccionar filtro: <select>
@@ -31,8 +31,8 @@
         <div class="card1"></div>
         <div class="card2"></div>
       </section>
-      <footer class="footer"></footer>
-    </div>
+<!--       <footer class="footer"></footer> -->
+    </main>
 
     	<!-- Borde azul -->
 	<div id="left"></div>
