funcionalidad para boton de tipos de pokemons (allTypes)

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,28 @@
 
   <section id="pokedexSecction"> 
 
+    <div id = "filterType">
+      <img id ="allTypes" src="./extra/allTypes.png" alt="logo todos los tipos de pokemon" onclick="mostrarAll()"/> 
+      <img id = "typeNormal" src="./extra/type_normal.png" alt="logo tipo normal" onclick="mostrarNormal()"/> 
+      <img id = "typeFighting" src="./extra/Type_Lucha.webp" alt="logo tipo lucha" onclick="mostrarFighting()"/> 
+      <img id = "typeFlying" src="./extra/type_volador.png" alt="logo tipo volador" onclick="mostrarFlying()"/> 
+      <img id = "typePoison" src="./extra/type_veneno.png" alt="logo tipo veneno" onclick="mostrarPoison()"/> 
+      <img id = "typeGround" src="./extra/Type_Tierra.webp" alt="logo tipo tierra" onclick="mostrarGround()"/> 
+      <img id = "typeRock" src="./extra/type_roca.png" alt="logo tipo roca" onclick="mostrarRock()"/> 
+      <img id = "typeBug" src="./extra/type_bicho.png" alt="logo tipo bicho" onclick="mostrarBug()"/> 
+      <img id = "typeGhost" src="./extra/Type_Fantasma.webp" alt="logo tipo fantasma" onclick="mostrarGhost()"/> 
+      <img id = "typeSteel" src="./extra/style_acero.webp" alt="logo tipo acero" onclick="mostrarSteel()"/> 
+      <img id = "typeFire" src="./extra/Type_Fuego.webp" alt="logo tipo fuego" onclick="mostrarFire()"/> 
+      <img id = "typeWater" src="./extra/Type_Agua.webp" alt="logo tipo agua" onclick="mostrarWater()"/> 
+      <img id = "typeGrass" src="./extra/type_planta.png" alt="logo tipo planta" onclick="mostrarGrass()"/> 
+      <img id = "typeElectric" src="./extra/Type_Electric.webp" alt="logo tipo electrico" onclick="mostrarElectric()"/> 
+      <img id = "typePsychic" src="./extra/Type_Psquico.webp" alt="logo tipo psiquico" onclick="mostrarPsychic()"/> 
+      <img id = "typeIce" src="./extra/type_hielo.png" alt="logo tipo hielo" onclick="mostrarIce()"/> 
+      <img id = "typeDragon" src="./extra/type_dragon.webp" alt="logo tipo dragon" onclick="mostrarDragon()"/>
+      <img id = "typeDark" src="./extra/Type_Siniestro.webp" alt="logo tipo siniestro" onclick="mostrarDark()"/> 
+      <img id = "typeFairy" src="./extra/Type_Hada.webp" alt="logo tipo hada" onclick="mostrarFairy()"/>  
+    </div>
+
     <div id = "pokemons">
       
     </div>
