--- a/src/index.html
+++ b/src/index.html
@@ -2,52 +2,58 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@300&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header class="banner-one" id="banner-one">
       <nav class="banner-one-content container">
-        <figure>
-          <img src="./img/logo.png" alt="logo1" class="img-logo1" />
-        </figure>
+        <a href="index.html#filmsGhibli" class="nav-texts">Films</a>
+        <img src="./img/logo.png" alt="logo1" class="img-logo1" />
+        <a href="stadistics.html" class="nav-texts">Statistics</a>
       </nav>
     </header>
     <main class="banner-two" id="banner-two">
       <section class="banner-two-content container">
         <article class="buttons-model">
-          <select class="select-buttons" id="buttons-directors">
-            <option value="">Filter by director</option>
-          </select>
-          <select class="select-buttons" id="buttons-producers">
-            <option value="">Filter by Productor</option>
-          </select>
-          <select class="select-buttons" id="buttons-order">
-            <option value="">Sort by</option>
-            <option value="a-z">A - Z</option>
-            <option value="z-a">Z - A</option>
-          </select>
-          <select class="select-buttons" id="buttons-release">
-            <option value="">Sort by</option>
-          </select>
-          <input
-            type="search"
-            placeholder="Buscar"
-            class="select-buttons plus"
-            id="buttons-search"
-          />
-          <input
-            type="button"
-            class="buttons-restore"
-            value="Restaurar"
-            onclick="location.reload()"
-          />
+          <article class="buttons-design">
+            <p class="text-buttons">Filter by :</p>
+            <select class="select-buttons" id="buttons-filter">
+              <option value="">Director</option>
+            </select>
+          </article>
+          <article class="buttons-design">
+            <p class="text-buttons">Order by :</p>
+            <select class="select-buttons" id="buttons-order">
+              <option value="">Alphabet</option>
+              <option value="a-z">A - Z</option>
+              <option value="z-a">Z - A</option>
+            </select>
+          </article>
+          <article class="buttons-design">
+            <p class="text-buttons">Search by:</p>
+            <input
+              type="search"
+              placeholder="Films"
+              class="select-buttons plusOne"
+              id="buttons-search"
+            />
+          </article>
+          <div>
+            <input
+              type="button"
+              class="select-buttons plusTwo"
+              value="Restore"
+              onclick="location.reload()"
+            />
+          </div>
         </article>
         <section class="cards-model" id="cards-model"></section>
       </section>
