Cambios de segunda vista y grafico

--- a/src/stadistics.html
+++ b/src/stadistics.html
@@ -15,12 +15,9 @@
   <body>
     <header class="banner-one" id="banner-one">
       <nav class="banner-one-content container">
-<<<<<<< HEAD
         <!-- <figure>
           <img src="./img/logo.png" alt="logo1" class="img-logo1" />
         </figure> -->
-=======
->>>>>>> efac756d1297e5a1feaee8c0462c23c72f67280a
         <a href="index.html#filmsGhibli" class="nav-texts">Films</a>
         <img src="./img/logo.png" alt="logo1" class="img-logo1" />
         <a href="stadistics.html" class="nav-texts">Statistics</a>
@@ -28,8 +25,8 @@
     </header>
     <main class="banner-two" id="banner-two">
       <section class="banner-two-content container"></section>
-<<<<<<< HEAD
       <div>
+        <h1>Statistics of existing Studio Ghibli's species.</h1>
         <canvas id="myChart" class="myChart"></canvas>
       </div>
     </main>
@@ -43,15 +40,3 @@
     <script src="stadistics.js" type="module"></script>
   </body>
 </html>
-=======
-    </main>
-    <footer class="information">
-      <article class="disclaimer">
-        <p class="text-disclaimer">© 2023 By Mayara - Jhoana</p>
-      </article>
-    </footer>
-    <div id="root"></div>
-    <script src="stadistics.js" type="module"></script>
-  </body>
-</html>
->>>>>>> efac756d1297e5a1feaee8c0462c23c72f67280a
