Modificacion del boton Restaurar

--- a/src/stadistics.html
+++ b/src/stadistics.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@300&family=Roboto+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat&family=Oswald:wght@300&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -25,7 +25,7 @@
     </main>
     <footer class="information">
       <article class="disclaimer">
-        <p class="text-disclaimer">© 2023 By Mayara - Jhoana</p>
+        <p class="text-disclaimer">© 2023 DATAGHIBLI</p>
       </article>
     </footer>
     <div id="root"></div>
