--- a/src/stadistics.html
+++ b/src/stadistics.html
@@ -27,7 +27,7 @@
       <section class="banner-two-content container"></section>
       <div>
         <h1>Statistics of existing Studio Ghibli's species.</h1>
-        <canvas id="myChart" class="myChart"></canvas>
+        <canvas id="myChart" class="myChart" width="400" height="400"></canvas>
       </div>
     </main>
     <footer class="information">
