Se arregla filtrado y se agrega pie de pagina

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+
+  <header>
   <meta charset="utf-8">
   <title>Data Lovers</title>
   <link rel="stylesheet" href="style.css" />
@@ -16,7 +18,9 @@
     Tu navegador no soporta audio HTML5.
   </audio>
 
-  <center><img src="extra/pikachu-running.gif" width=" 10%" /> <img src="extra/poGoLogo2.png" width="30%" /><img src="extra/pikachu-running.gif" width=" 10%" /> </center>
+  <center> <img src="extra/pikachu-running.gif" width=" 10%" /> <img src="extra/poGoLogo2.png" width="25%" /><img src="extra/pikachu-running.gif" width=" 10%" /> </center>
+
+</header>
 
   <main class="boxtwo">
     <div id="menu">
@@ -25,7 +29,7 @@
       <button id="buttonMap"> Mapa</button>
       <button id="buttonExtra"> Noticias</button>
     </div>
-  </main>
+  
 
   <section id="homeSecction"> 
 
@@ -63,7 +67,7 @@
   </section>
 
   <section id="pokedexSecction"> 
-
+  <h3> Selecciona el tipo de Pokémon que necesitas, si quieres verlos todos oprime la pokebola</h3>
     <div id = "filterType">
       <img id ="allTypes" src="./extra/allTypes.png" alt="logo todos los tipos de pokemon" onclick="mostrarAll()"/> 
       <img id = "typeNormal" src="./extra/type_normal.png" alt="logo tipo normal" onclick="mostrarNormal()"/> 
@@ -103,14 +107,14 @@
   </section>
 
 
+</main>
 
 
 
 
 
 
-
-<footer> Web creada por Gisselle y Carolina</footer>
+<footer> Web creada por Gisselle y Carolina <img src="./extra/pokeball-pokemon.gif" style = "width: 10%" /> </footer>
 
 
 
