--- a/src/index.html
+++ b/src/index.html
@@ -26,17 +26,17 @@
         <article class="buttons-model">
           <article class="buttons-design">
             <p class="text-buttons">Filter by :</p>
-           <!--<select class="select-buttons" id="buttons-filter">
+           <select class="select-buttons" id="buttons-filter">
               <option value="">Director</option>
-            </select> -->
+            </select> 
           </article>
           <article class="buttons-design">
             <p class="text-buttons">Order by :</p>
-           <!--<select class="select-buttons" id="buttons-order">
+           <select class="select-buttons" id="buttons-order">
               <option value="">Alphabet</option>
               <option value="a-z">A - Z</option>
               <option value="z-a">Z - A</option>
-            </select> -->
+            </select> 
           </article>
           <article class="buttons-design">
             <p class="text-buttons">Search by:</p>
