Creacion de las cards de peliculas con formato en CSS

--- a/src/index.html
+++ b/src/index.html
@@ -8,29 +8,32 @@
   <body>
     <main id="root">
       <header>
-        <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli">
-        </div>
+        <div class="logo"><img class="ghibli1" src="img/ghibli1.png" alt="Logo Ghibli"></div>
         <div class="barra">
           <div class="buscar">
             <div class="buscador">Buscar:</div>
             <input class="b-busqueda" type="text">
           </div>
-          <div class="filtro">Seleccionar filtro: <select>
-            <option value="pelicula">Pelicula</option>
-            <option value="anio">Año</option>
-            <option value="score">Score</option>
-            <option value="director">Director</option>
-          </select></div>
-          <div class="orden">Ordenar por: <select>
-            <option value="anio_up">Año</option>
-            <option value="name">Nombre</option>
-          </select></div>
+          <div class="filtro">Seleccionar filtro: 
+            <select>
+              <option value="pelicula">Pelicula</option>
+              <option value="anio">Año</option>
+              <option value="score">Score</option>
+              <option value="director">Director</option>
+            </select>
+          </div>
+          <div class="orden">Ordenar por: 
+            <select>
+              <option value="anio_up">Año</option>
+              <option value="name">Nombre</option>
+            </select>
+          </div>
         </div>
       </header>
       <section>
-        <div class="card1"></div>
-        <div class="card2"></div>
       </section>
+      
+
 <!--       <footer class="footer"></footer> -->
     </main>
 
