cambios en html y css

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,10 @@
       <section>
         <div class="card1"></div>
         <div class="card2"></div>
+        <div class="card3"></div>
+        <div class="card4"></div>
+        <div class="card5"></div>
+        <div class="card6"></div>
       </section>
 <!--       <footer class="footer"></footer> -->
     </main>
@@ -40,7 +44,6 @@
       -->
 	<div id="left"></div>
 	<div id="right"></div>
-	<div id="top"></div>
 	<div id="bottom"></div>
     <script src="main.js" type="module"></script>
   </body>
