modificacaciones en el diseño de las tarjetas

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,9 @@
         </div>
       </header>
       <section>
-<<<<<<< HEAD
-=======
->>>>>>> f06732f2382516673713be99486b5520c0809b15
+
       </section>
+
       
 
 <!--       <footer class="footer"></footer> -->
@@ -47,6 +46,7 @@
 	<div id="left"></div>
 	<div id="right"></div>
 	<div id="bottom"></div>
+  <div id="top"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
