Visualizacion de la data en el interfaz

--- a/src/index.html
+++ b/src/index.html
@@ -19,24 +19,21 @@
           </ul>
         </nav>
       </header>
+      <p></p>
       <!--Cuerpo o contenido principal -->
       <main data-content="content" id="inicio" class="active"> 
-        <div class="cuadrodeTarjeta">
-         <h3>caja principal</h3>
-         <p style="font-size: 100px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit rerum culpa, dolorum aspernatur officia fugit voluptates minima dicta similique molestiae autem, facilis amet harum soluta quia, omnis in cum magnam.</p>
-        </div>
+        <div class=""></div>
+        <div></div>
       </main>
 
        <!-- Caja 2 -->
-        <section data-content="content" id="pokedex" >
-          <div class="cuadrodeTarjeta">
-           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8UaO8zvh5DjMIZ3C-jUQyIdtnCH9VUBvPRCZIbf60YQ&s" width="400px">
-          </div>
+        <section data-content="content" id="pokedex"  >
+          <div class="Cajon-pokedex" id="content-pokedexs"></div>
         </section>
        
       <!--caja 3 -->
         <section data-content="content" id="noticias" >
-          <div class="cuadrodeTarjeta">
+          <div class="">
             <p>caja 3</p>
           </div>
         </section>
