--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,17 @@
 
 <body>
 
+  <!--Control de audio-->
   <audio controls>
     <source src="Extras/Professor (Main Theme) - Pokémon GO OST (Extended).mp3">
     Tu navegador no soporta audio HTML5.
   </audio>
 
+  <!--Titulo -->
   <center> <img src="extra/pikachu-running.gif" width=" 10%" /> <img src="extra/poGoLogo2.png" width="25%" /><img src="extra/pikachu-running.gif" width=" 10%" /> </center>
 
 </header>
-
+<!--Barra de menú-->
   <main class="boxtwo">
     <div id="menu">
       <button id="buttonHome">Home</button>
@@ -30,7 +32,7 @@
       <button id="buttonExtra"> Noticias</button>
     </div>
   
-
+<!--Seccion de home-->
   <section id="homeSecction"> 
 
   <div id= "welcome">
@@ -66,32 +68,40 @@
   </div>
   </section>
 
+<!--Sección de pokedex-->
   <section id="pokedexSecction"> 
   <h3> Selecciona el tipo de Pokémon que necesitas, si quieres verlos todos oprime la pokebola</h3>
     <div id = "filterType">
-      <img id ="allTypes" src="./extra/allTypes.png" alt="logo todos los tipos de pokemon" onclick="mostrarAll()"/> 
-      <img id = "typeNormal" src="./extra/type_normal.png" alt="logo tipo normal" onclick="mostrarNormal()"/> 
-      <img id = "typeFighting" src="./extra/Type_Lucha.webp" alt="logo tipo lucha" onclick="mostrarFighting()"/> 
-      <img id = "typeFlying" src="./extra/type_volador.png" alt="logo tipo volador" onclick="mostrarFlying()"/> 
-      <img id = "typePoison" src="./extra/type_veneno.png" alt="logo tipo veneno" onclick="mostrarPoison()"/> 
-      <img id = "typeGround" src="./extra/Type_Tierra.webp" alt="logo tipo tierra" onclick="mostrarGround()"/> 
-      <img id = "typeRock" src="./extra/type_roca.png" alt="logo tipo roca" onclick="mostrarRock()"/> 
-      <img id = "typeBug" src="./extra/type_bicho.png" alt="logo tipo bicho" onclick="mostrarBug()"/> 
-      <img id = "typeGhost" src="./extra/Type_Fantasma.webp" alt="logo tipo fantasma" onclick="mostrarGhost()"/> 
-      <img id = "typeSteel" src="./extra/style_acero.webp" alt="logo tipo acero" onclick="mostrarSteel()"/> 
-      <img id = "typeFire" src="./extra/Type_Fuego.webp" alt="logo tipo fuego" onclick="mostrarFire()"/> 
-      <img id = "typeWater" src="./extra/Type_Agua.webp" alt="logo tipo agua" onclick="mostrarWater()"/> 
-      <img id = "typeGrass" src="./extra/type_planta.png" alt="logo tipo planta" onclick="mostrarGrass()"/> 
-      <img id = "typeElectric" src="./extra/Type_Electric.webp" alt="logo tipo electrico" onclick="mostrarElectric()"/> 
-      <img id = "typePsychic" src="./extra/Type_Psquico.webp" alt="logo tipo psiquico" onclick="mostrarPsychic()"/> 
-      <img id = "typeIce" src="./extra/type_hielo.png" alt="logo tipo hielo" onclick="mostrarIce()"/> 
-      <img id = "typeDragon" src="./extra/type_dragon.webp" alt="logo tipo dragon" onclick="mostrarDragon()"/>
-      <img id = "typeDark" src="./extra/Type_Siniestro.webp" alt="logo tipo siniestro" onclick="mostrarDark()"/> 
-      <img id = "typeFairy" src="./extra/Type_Hada.webp" alt="logo tipo hada" onclick="mostrarFairy()"/>  
+      <img id ="allTypes" src="./extra/allTypes.png" alt="logo todos los tipos de pokemon" /> 
+      <img id = "typeNormal" src="./extra/type_normal.png" alt="logo tipo normal" /> 
+      <img id = "typeFighting" src="./extra/Type_Lucha.webp" alt="logo tipo lucha" /> 
+      <img id = "typeFlying" src="./extra/type_volador.png" alt="logo tipo volador" /> 
+      <img id = "typePoison" src="./extra/type_veneno.png" alt="logo tipo veneno" /> 
+      <img id = "typeGround" src="./extra/Type_Tierra.webp" alt="logo tipo tierra" /> 
+      <img id = "typeRock" src="./extra/type_roca.png" alt="logo tipo roca" /> 
+      <img id = "typeBug" src="./extra/type_bicho.png" alt="logo tipo bicho" /> 
+      <img id = "typeGhost" src="./extra/Type_Fantasma.webp" alt="logo tipo fantasma" /> 
+      <img id = "typeSteel" src="./extra/style_acero.webp" alt="logo tipo acero" /> 
+      <img id = "typeFire" src="./extra/Type_Fuego.webp" alt="logo tipo fuego" /> 
+      <img id = "typeWater" src="./extra/Type_Agua.webp" alt="logo tipo agua" /> 
+      <img id = "typeGrass" src="./extra/type_planta.png" alt="logo tipo planta" /> 
+      <img id = "typeElectric" src="./extra/Type_Electric.webp" alt="logo tipo electrico" /> 
+      <img id = "typePsychic" src="./extra/Type_Psquico.webp" alt="logo tipo psiquico" /> 
+      <img id = "typeIce" src="./extra/type_hielo.png" alt="logo tipo hielo" /> 
+      <img id = "typeDragon" src="./extra/type_dragon.webp" alt="logo tipo dragon" />
+      <img id = "typeDark" src="./extra/Type_Siniestro.webp" alt="logo tipo siniestro"/> 
+      <img id = "typeFairy" src="./extra/Type_Hada.webp" alt="logo tipo hada" /> 
     </div>
+    <article> 
+    <select name="Ordenar" id="filterLetter" class="selector">
+      <option disabled selected>Ordenar por:</option>
+      <option id="asc" value="1">A-Z</option>
+      <option id="des" value="2">Z-A</option> </select>
+    </article>
 
+    <!--Lista de pokemon-->
     <div id = "pokemons">
-      
+    
     </div>
 
   </section>
